--- a/tests/cassettes/test_user_delete.yaml
+++ b/tests/cassettes/test_user_delete.yaml
@@ -1,8 +1,6 @@
 interactions:
 - request:
-    body: '{"carrier_account": {"type": "UpsAccount", "credentials": {"account_number":
-      "A1A1A1", "user_id": "USERID", "password": "PASSWORD", "access_license_number":
-      "ALN"}}}'
+    body: '{"user": {"name": "Test User"}}'
     headers:
       Accept:
       - '*/*'
@@ -11,7 +9,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '165'
+      - '31'
       Content-Type:
       - application/json
       authorization:
@@ -21,25 +19,22 @@ interactions:
       x-client-user-agent:
       - REDACTED
     method: POST
-    uri: https://api.easypost.com/v2/carrier_accounts
+    uri: https://api.easypost.com/v2/users
   response:
     body:
-      string: '{"id": "ca_bb4d18c75a14419cae8756fa9cb1ca60", "object": "CarrierAccount",
-        "type": "UpsAccount", "clone": false, "created_at": "2022-05-10T23:41:00Z",
-        "updated_at": "2022-05-10T23:41:00Z", "description": "UPS Account", "reference":
-        null, "billing_type": "carrier", "readable": "UPS", "logo": null, "fields":
-        {"credentials": {"account_number": {"visibility": "readonly", "label": "UPS
-        Account Number", "value": "A1A1A1"}}}, "credentials": ["REDACTED"], "test_credentials":
-        ["REDACTED"]}'
+      string: '{"id": "user_5b56c0c9b2fa4942881f333d1001e164", "object": "User", "parent_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Test User", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-05-10T20:24:41Z", "children":
+        ["REDACTED"], "api_keys": ["REDACTED"]}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '457'
+      - '634'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"cbde7f1155b6d5b449a59cdcc667049e"
+      - W/"607a68238df9dfde704e02f7afcc5f2d"
       expires:
       - '0'
       pragma:
@@ -57,19 +52,18 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 7cc43dc3627af80cefb5a3590021d312
+      - c6ef69b9627aca09efb5854e0015b9be
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - intlb1wdc fde591f008
-      - extlb1wdc c51cdb8bf2
+      - intlb2nuq fde591f008
+      - extlb1nuq c51cdb8bf2
       x-runtime:
-      - '0.119416'
+      - '0.556993'
       x-version-label:
       - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
@@ -95,19 +89,13 @@ interactions:
       x-client-user-agent:
       - REDACTED
     method: DELETE
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_bb4d18c75a14419cae8756fa9cb1ca60
+    uri: https://api.easypost.com/v2/users/user_5b56c0c9b2fa4942881f333d1001e164
   response:
     body:
-      string: '{}'
+      string: ''
     headers:
       cache-control:
       - no-cache, no-store
-      content-length:
-      - '2'
-      content-type:
-      - application/json; charset=utf-8
-      etag:
-      - W/"44136fa355b3678a1146ad16f7e8649e"
       expires:
       - '0'
       pragma:
@@ -116,8 +104,6 @@ interactions:
       - strict-origin-when-cross-origin
       strict-transport-security:
       - max-age=31536000; includeSubDomains; preload
-      transfer-encoding:
-      - chunked
       x-backend:
       - easypost
       x-content-type-options:
@@ -125,24 +111,23 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 7cc43dc3627af80defb5a3590021d335
+      - c6ef69b9627aca0aefb5854e0015b9f7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb1wdc c51cdb8bf2
+      - extlb1nuq c51cdb8bf2
       x-runtime:
-      - '0.110960'
+      - '0.108854'
       x-version-label:
       - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 200
-      message: OK
+      code: 204
+      message: No Content
 version: 1
