--- a/tests/cassettes/test_referral_user_all.yaml
+++ b/tests/cassettes/test_referral_user_all.yaml
@@ -9,30 +9,57 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - REDACTED
       user-agent:
-      - easypost/v2 pythonclient/suppressed
+      - REDACTED
       x-client-user-agent:
-      - suppressed
+      - REDACTED
     method: GET
     uri: https://api.easypost.com/beta/referral_customers?page_size=5
   response:
     body:
-      string: '[{"id":"user_634b6daa05744bfaa205058f06864363","object":"User","parent_id":null,"name":"Firstname
-        Lastname","phone_number":"8888888888","verified":true,"created_at":"2022-04-26T15:50:28Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_35cb81fb8af1454dabf1f6afa7330634","object":"User","parent_id":null,"name":"Firstname
-        Lastname","phone_number":"8888888888","verified":true,"created_at":"2022-04-27T20:20:52Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_fa93cc16bcc24c078ee057ce82f38eed","object":"User","parent_id":null,"name":"test
-        test","phone_number":"8888888888","verified":true,"created_at":"2022-04-28T22:34:38Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_4a22730cdc844ce1bc2efbed999c869f","object":"User","parent_id":null,"name":"test
-        test","phone_number":"8888888888","verified":true,"created_at":"2022-04-29T19:35:33Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"test@test.com","children":[]},{"id":"user_488e391395f4416196a31965fecac409","object":"User","parent_id":null,"name":"Firstname
-        Lastname","phone_number":"8888888888","verified":true,"created_at":"2022-05-02T18:48:22Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":"100.00","secondary_recharge_amount":"100.00","recharge_threshold":"0.00","has_billing_method":true,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]}]'
+      string: '[{"id": "user_634b6daa05744bfaa205058f06864363", "object": "User",
+        "parent_id": null, "name": "Firstname Lastname", "phone_number": "REDACTED",
+        "verified": true, "created_at": "2022-04-26T15:50:28Z", "balance": "0.00000",
+        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_35cb81fb8af1454dabf1f6afa7330634", "object": "User", "parent_id":
+        null, "name": "Firstname Lastname", "phone_number": "REDACTED", "verified":
+        true, "created_at": "2022-04-27T20:20:52Z", "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
+        "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
+        "0.25", "email": "REDACTED", "children": ["REDACTED"]}, {"id": "user_fa93cc16bcc24c078ee057ce82f38eed",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-04-28T22:34:38Z", "balance":
+        "0.00000", "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_4a22730cdc844ce1bc2efbed999c869f", "object": "User", "parent_id":
+        null, "name": "test test", "phone_number": "REDACTED", "verified": true, "created_at":
+        "2022-04-29T19:35:33Z", "balance": "0.00000", "price_per_shipment": "0.00000",
+        "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "REDACTED", "children": ["REDACTED"]}, {"id": "user_488e391395f4416196a31965fecac409",
+        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-05-02T18:48:22Z", "balance":
+        "0.00000", "price_per_shipment": "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount":
+        "100.00", "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]}]'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '2524'
+      - '2534'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"6cb71d0ae6f640aaa11a969bca01681a"
+      - W/"a150cbb12f3c14f2526250370c45d394"
       expires:
       - '0'
       pragma:
@@ -45,28 +72,25 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 736c80906270647aff1484a80019cae9
+      - 2f0f5533627bcca2e779942e000c7daf
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb3wdc 5fac7c1107
+      - intlb2nuq fde591f008
+      - extlb2nuq c51cdb8bf2
       x-runtime:
-      - '0.277262'
+      - '0.196335'
       x-version-label:
-      - easypost-202205022101-30e4392386-master
+      - easypost-202205110022-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
