--- a/tests/cassettes/test_referral_user_create.yaml
+++ b/tests/cassettes/test_referral_user_create.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: null
+    body: '{"user": {"name": "test test", "email": "test@test.com", "phone": "8888888888"}}'
     headers:
       Accept:
       - '*/*'
@@ -8,32 +8,36 @@ interactions:
       - gzip, deflate
       Connection:
       - keep-alive
+      Content-Length:
+      - '80'
+      Content-Type:
+      - application/json
       authorization:
       - REDACTED
       user-agent:
       - REDACTED
       x-client-user-agent:
       - REDACTED
-    method: GET
-    uri: https://api.easypost.com/v2/users
+    method: POST
+    uri: https://api.easypost.com/beta/referral_customers
   response:
     body:
-      string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
-        null, "name": "EasyPost Python Client Library Tests", "phone_number": "REDACTED",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
-        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
-        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
-        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "REDACTED", "children": ["REDACTED"]}'
+      string: '{"id": "user_c21adae296d44e0d92bd3b3d4f93d12a", "object": "User", "parent_id":
+        null, "name": "test test", "phone_number": "REDACTED", "verified": true, "created_at":
+        "2022-05-10T20:53:02Z", "balance": "0.00000", "price_per_shipment": "0.00000",
+        "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "REDACTED", "children": ["REDACTED"], "api_keys": ["REDACTED"]}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '8070'
+      - '961'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"b0fa578474b6326fde45bf6b1b04aa68"
+      - W/"2745f70aedc34e78db98ea72a0220b49"
       expires:
       - '0'
       pragma:
@@ -51,23 +55,23 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f56ecb31627aca07efb5854c00141d07
+      - f56ecb35627ad0aeefb58a5500168fb1
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq fde591f008
       - extlb2nuq c51cdb8bf2
       x-runtime:
-      - '0.382113'
+      - '0.708505'
       x-version-label:
       - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 200
-      message: OK
+      code: 201
+      message: Created
 version: 1
