--- a/tests/cassettes/test_referral_user_update.yaml
+++ b/tests/cassettes/test_referral_user_update.yaml
@@ -9,32 +9,90 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - REDACTED
       user-agent:
-      - easypost/v2 pythonclient/suppressed
+      - REDACTED
       x-client-user-agent:
-      - suppressed
+      - REDACTED
     method: GET
     uri: https://api.easypost.com/beta/referral_customers
   response:
     body:
-      string: '[{"id":"user_634b6daa05744bfaa205058f06864363","object":"User","parent_id":null,"name":"Firstname
-        Lastname","phone_number":"8888888888","verified":true,"created_at":"2022-04-26T15:50:28Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_35cb81fb8af1454dabf1f6afa7330634","object":"User","parent_id":null,"name":"Firstname
-        Lastname","phone_number":"8888888888","verified":true,"created_at":"2022-04-27T20:20:52Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_fa93cc16bcc24c078ee057ce82f38eed","object":"User","parent_id":null,"name":"test
-        test","phone_number":"8888888888","verified":true,"created_at":"2022-04-28T22:34:38Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_4a22730cdc844ce1bc2efbed999c869f","object":"User","parent_id":null,"name":"test
-        test","phone_number":"8888888888","verified":true,"created_at":"2022-04-29T19:35:33Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"test@test.com","children":[]},{"id":"user_488e391395f4416196a31965fecac409","object":"User","parent_id":null,"name":"Firstname
-        Lastname","phone_number":"8888888888","verified":true,"created_at":"2022-05-02T18:48:22Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":"100.00","secondary_recharge_amount":"100.00","recharge_threshold":"0.00","has_billing_method":true,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"email@example.com","children":[]},{"id":"user_91b120087ff843349b9a3f0675572bb1","object":"User","parent_id":null,"name":"test
-        test","phone_number":"8888888888","verified":true,"created_at":"2022-05-02T19:04:10Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"test@test.com","children":[]},{"id":"user_4ae0d572fbe542deb7efa51935a5b826","object":"User","parent_id":null,"name":"test
-        test","phone_number":"8888888888","verified":true,"created_at":"2022-05-02T23:08:40Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.0325","default_insurance_amount":"50.00","insurance_fee_rate":"0.005","insurance_fee_minimum":"0.25","email":"test@test.com","children":[]}]'
+      string: '[{"id": "user_634b6daa05744bfaa205058f06864363", "object": "User",
+        "parent_id": null, "name": "Firstname Lastname", "phone_number": "REDACTED",
+        "verified": true, "created_at": "2022-04-26T15:50:28Z", "balance": "0.00000",
+        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_35cb81fb8af1454dabf1f6afa7330634", "object": "User", "parent_id":
+        null, "name": "Firstname Lastname", "phone_number": "REDACTED", "verified":
+        true, "created_at": "2022-04-27T20:20:52Z", "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
+        "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
+        "0.25", "email": "REDACTED", "children": ["REDACTED"]}, {"id": "user_fa93cc16bcc24c078ee057ce82f38eed",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-04-28T22:34:38Z", "balance":
+        "0.00000", "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_4a22730cdc844ce1bc2efbed999c869f", "object": "User", "parent_id":
+        null, "name": "test test", "phone_number": "REDACTED", "verified": true, "created_at":
+        "2022-04-29T19:35:33Z", "balance": "0.00000", "price_per_shipment": "0.00000",
+        "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "REDACTED", "children": ["REDACTED"]}, {"id": "user_488e391395f4416196a31965fecac409",
+        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-05-02T18:48:22Z", "balance":
+        "0.00000", "price_per_shipment": "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount":
+        "100.00", "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_91b120087ff843349b9a3f0675572bb1", "object": "User", "parent_id":
+        null, "name": "test test", "phone_number": "REDACTED", "verified": true, "created_at":
+        "2022-05-02T19:04:10Z", "balance": "0.00000", "price_per_shipment": "0.00000",
+        "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "REDACTED", "children": ["REDACTED"]}, {"id": "user_4ae0d572fbe542deb7efa51935a5b826",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-05-02T23:08:40Z", "balance":
+        "0.00000", "price_per_shipment": "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount":
+        "100.00", "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_71189529eba747ce83aa69303e22c7df", "object": "User", "parent_id":
+        null, "name": "Firstname Lastname", "phone_number": "REDACTED", "verified":
+        true, "created_at": "2022-05-04T22:05:27Z", "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "REDACTED", "children": ["REDACTED"]}, {"id": "user_c13290f1f6a442d79657b8bfe5daeeba",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "REDACTED", "verified": true, "created_at": "2022-05-05T16:54:58Z", "balance":
+        "0.00000", "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.0325", "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005",
+        "insurance_fee_minimum": "0.25", "email": "REDACTED", "children": ["REDACTED"]},
+        {"id": "user_b73fdc6c6a58421ea884a82ad14520a5", "object": "User", "parent_id":
+        null, "name": "test test", "phone_number": "REDACTED", "verified": true, "created_at":
+        "2022-05-05T16:55:59Z", "balance": "0.00000", "price_per_shipment": "0.00000",
+        "recharge_amount": "100.00", "secondary_recharge_amount": "100.00", "recharge_threshold":
+        "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "REDACTED", "children": ["REDACTED"]}]'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '3512'
+      - '5046'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"ba002b159f5309bdc1f2e50f26670240"
+      - W/"c4774ffe20383c5575ddc8873eb066e0"
       expires:
       - '0'
       pragma:
@@ -47,28 +105,25 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 736c808f62706479ff1484a70019ca7b
+      - 2f0f5539627bcca1e779942d000c7d4a
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb3wdc 5fac7c1107
+      - intlb1nuq fde591f008
+      - extlb2nuq c51cdb8bf2
       x-runtime:
-      - '0.234250'
+      - '0.462941'
       x-version-label:
-      - easypost-202205022101-30e4392386-master
+      - easypost-202205110022-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -88,18 +143,16 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - REDACTED
       user-agent:
-      - easypost/v2 pythonclient/suppressed
+      - REDACTED
       x-client-user-agent:
-      - suppressed
+      - REDACTED
     method: PUT
     uri: https://api.easypost.com/beta/referral_customers/user_634b6daa05744bfaa205058f06864363
   response:
     body:
-      string: '{"message":"Referral Customer email updated successfully"}
-
-        '
+      string: '{"message": "Referral Customer email updated successfully"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -126,21 +179,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 736c808f6270647aff1484a70019caad
+      - 2f0f5539627bcca2e779942d000c7d8c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb3wdc 5fac7c1107
+      - extlb2nuq c51cdb8bf2
       x-runtime:
-      - '0.103702'
+      - '0.105704'
       x-version-label:
-      - easypost-202205022101-30e4392386-master
+      - easypost-202205110022-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
