--- a/tests/cassettes/test_user_update.yaml
+++ b/tests/cassettes/test_user_update.yaml
@@ -9,42 +9,31 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - REDACTED
       user-agent:
-      - easypost/v2 pythonclient/suppressed
+      - REDACTED
       x-client-user-agent:
-      - suppressed
+      - REDACTED
     method: GET
     uri: https://api.easypost.com/v2/users
   response:
     body:
-      string: '{"id":"user_54356a6b96c940d8913961a3c7b909f2","object":"User","parent_id":null,"name":"EasyPost
-        Python Client Library Tests","phone_number":"5555555555","verified":true,"created_at":"2017-03-01T03:01:34Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.03","default_insurance_amount":null,"insurance_fee_rate":"0.01","insurance_fee_minimum":"1.00","email":"dev+easypost-python@easypost.com","children":[{"id":"user_9bc25a1d07f54682997435937b30d4f0","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-05-11T21:59:07Z","children":[]},{"id":"user_36a3958cd65a4592b1ddb742f7d3362a","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-05-14T03:55:52Z","children":[]},{"id":"user_f55178b032c44c7e8c2611fa84415d94","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-05-14T04:03:23Z","children":[]},{"id":"user_e1f80a2e05f84319960c63701a30e7e0","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-07-22T11:19:45Z","children":[]},{"id":"user_6e4ee9596b174c1cad3480d47f5027ef","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-07-27T00:28:49Z","children":[]},{"id":"user_f0f42ddbb05c400492ec6bb8fb699ff7","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-04T21:47:02Z","children":[]},{"id":"user_c25107511f01413eb978b160bcf544f3","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Testing","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T03:09:38Z","children":[]},{"id":"user_15beb95593da4218991d0dde8d91c519","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Testing","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T03:14:26Z","children":[]},{"id":"user_2eb666a605dd487e92e392972fdcdd4e","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T04:49:12Z","children":[]},{"id":"user_60c5106702db498b81feef3c8fc06086","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T17:14:37Z","children":[]},{"id":"user_271679a319e047628b22b015e7395845","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T18:48:09Z","children":[]},{"id":"user_10d3414e82ef40e9b1d4cc683fb2f1fa","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T19:30:32Z","children":[]},{"id":"user_910c3ccbc07a44c49015011c298c6ad3","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T23:05:15Z","children":[]},{"id":"user_dd98700490a04734aa56843be76fc786","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-10T02:43:39Z","children":[]},{"id":"user_d344d010c21245b1a18b714e0962cf7f","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-10T19:36:43Z","children":[]},{"id":"user_f5b66eda54a74ee9b7e4b672ebb37772","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-15T20:51:54Z","children":[]}]}'
+      string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
+        null, "name": "EasyPost Python Client Library Tests", "phone_number": "REDACTED",
+        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
+        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
+        "1.00", "email": "REDACTED", "children": ["REDACTED"]}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '4422'
+      - '8070'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"769a66915eb9d72e34d27a4a37438076"
+      - W/"b0fa578474b6326fde45bf6b1b04aa68"
       expires:
       - '0'
       pragma:
@@ -62,20 +51,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fbb6272e173e786bc1c0013b1c5
+      - 7cc43dc1627aca08efb5854d00148834
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2wdc fde591f008
+      - extlb1wdc c51cdb8bf2
       x-runtime:
-      - '0.273488'
+      - '0.355213'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -95,42 +85,31 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - REDACTED
       user-agent:
-      - easypost/v2 pythonclient/suppressed
+      - REDACTED
       x-client-user-agent:
-      - suppressed
+      - REDACTED
     method: PUT
     uri: https://api.easypost.com/v2/users/user_54356a6b96c940d8913961a3c7b909f2
   response:
     body:
-      string: '{"id":"user_54356a6b96c940d8913961a3c7b909f2","object":"User","parent_id":null,"name":"EasyPost
-        Python Client Library Tests","phone_number":"5555555555","verified":true,"created_at":"2017-03-01T03:01:34Z","balance":"0.00000","price_per_shipment":"0.00000","recharge_amount":null,"secondary_recharge_amount":null,"recharge_threshold":null,"has_billing_method":null,"cc_fee_rate":"0.03","default_insurance_amount":null,"insurance_fee_rate":"0.01","insurance_fee_minimum":"1.00","email":"dev+easypost-python@easypost.com","children":[{"id":"user_9bc25a1d07f54682997435937b30d4f0","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-05-11T21:59:07Z","children":[]},{"id":"user_36a3958cd65a4592b1ddb742f7d3362a","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-05-14T03:55:52Z","children":[]},{"id":"user_f55178b032c44c7e8c2611fa84415d94","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-05-14T04:03:23Z","children":[]},{"id":"user_e1f80a2e05f84319960c63701a30e7e0","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-07-22T11:19:45Z","children":[]},{"id":"user_6e4ee9596b174c1cad3480d47f5027ef","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2020-07-27T00:28:49Z","children":[]},{"id":"user_f0f42ddbb05c400492ec6bb8fb699ff7","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-04T21:47:02Z","children":[]},{"id":"user_c25107511f01413eb978b160bcf544f3","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Testing","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T03:09:38Z","children":[]},{"id":"user_15beb95593da4218991d0dde8d91c519","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Testing","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T03:14:26Z","children":[]},{"id":"user_2eb666a605dd487e92e392972fdcdd4e","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T04:49:12Z","children":[]},{"id":"user_60c5106702db498b81feef3c8fc06086","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T17:14:37Z","children":[]},{"id":"user_271679a319e047628b22b015e7395845","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T18:48:09Z","children":[]},{"id":"user_10d3414e82ef40e9b1d4cc683fb2f1fa","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T19:30:32Z","children":[]},{"id":"user_910c3ccbc07a44c49015011c298c6ad3","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-09T23:05:15Z","children":[]},{"id":"user_dd98700490a04734aa56843be76fc786","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-10T02:43:39Z","children":[]},{"id":"user_d344d010c21245b1a18b714e0962cf7f","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-10T19:36:43Z","children":[]},{"id":"user_f5b66eda54a74ee9b7e4b672ebb37772","object":"User","parent_id":"user_54356a6b96c940d8913961a3c7b909f2","name":"Python
-        All-Things-Tested","phone_number":"8005550100","verified":true,"created_at":"2022-03-15T20:51:54Z","children":[]}]}'
+      string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
+        null, "name": "EasyPost Python Client Library Tests", "phone_number": "REDACTED",
+        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
+        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
+        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
+        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
+        "1.00", "email": "REDACTED", "children": ["REDACTED"]}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '4422'
+      - '8070'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"769a66915eb9d72e34d27a4a37438076"
+      - W/"b0fa578474b6326fde45bf6b1b04aa68"
       expires:
       - '0'
       pragma:
@@ -148,20 +127,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fbb6272e174e786bc1c0013b1db
+      - 7cc43dc1627aca08efb5854d00148862
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb1wdc fde591f008
+      - extlb1wdc c51cdb8bf2
       x-runtime:
-      - '0.229088'
+      - '0.425732'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
       - 1; mode=block
     status:
