--- a/tests/cassettes/test_webhook_update.yaml
+++ b/tests/cassettes/test_webhook_update.yaml
@@ -1,8 +1,6 @@
 interactions:
 - request:
-    body: '{"carrier_account": {"type": "UpsAccount", "credentials": {"account_number":
-      "A1A1A1", "user_id": "USERID", "password": "PASSWORD", "access_license_number":
-      "ALN"}}}'
+    body: '{"webhook": {"url": "http://example.com"}}'
     headers:
       Accept:
       - '*/*'
@@ -11,7 +9,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '165'
+      - '42'
       Content-Type:
       - application/json
       authorization:
@@ -21,25 +19,21 @@ interactions:
       x-client-user-agent:
       - REDACTED
     method: POST
-    uri: https://api.easypost.com/v2/carrier_accounts
+    uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "ca_bb4d18c75a14419cae8756fa9cb1ca60", "object": "CarrierAccount",
-        "type": "UpsAccount", "clone": false, "created_at": "2022-05-10T23:41:00Z",
-        "updated_at": "2022-05-10T23:41:00Z", "description": "UPS Account", "reference":
-        null, "billing_type": "carrier", "readable": "UPS", "logo": null, "fields":
-        {"credentials": {"account_number": {"visibility": "readonly", "label": "UPS
-        Account Number", "value": "A1A1A1"}}}, "credentials": ["REDACTED"], "test_credentials":
-        ["REDACTED"]}'
+      string: '{"id": "hook_1b7c4472d0b611ec98f0711287adaa77", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2022-05-10T23:08:31Z",
+        "disabled_at": null}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '457'
+      - '161'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"cbde7f1155b6d5b449a59cdcc667049e"
+      - W/"9dc66d611c45ff3ecb2a1d245383a452"
       expires:
       - '0'
       pragma:
@@ -57,19 +51,89 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 7cc43dc3627af80cefb5a3590021d312
+      - c6ef69b9627af06eefb59f380021e39c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb1nuq
+      x-permitted-cross-domain-policies:
+      - none
+      x-proxied:
+      - intlb2nuq fde591f008
+      - extlb1nuq c51cdb8bf2
+      x-runtime:
+      - '0.174206'
+      x-version-label:
+      - easypost-202205100008-b4df6b5700-master
+      x-xss-protection:
+      - 1; mode=block
+    status:
+      code: 201
+      message: Created
+- request:
+    body: '{}'
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '2'
+      Content-Type:
+      - application/json
+      authorization:
+      - REDACTED
+      user-agent:
+      - REDACTED
+      x-client-user-agent:
+      - REDACTED
+    method: PUT
+    uri: https://api.easypost.com/v2/webhooks/hook_1b7c4472d0b611ec98f0711287adaa77
+  response:
+    body:
+      string: '{"id": "hook_1b7c4472d0b611ec98f0711287adaa77", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2022-05-10T23:08:31Z",
+        "disabled_at": null}'
+    headers:
+      cache-control:
+      - no-cache, no-store
+      content-length:
+      - '161'
+      content-type:
+      - application/json; charset=utf-8
+      etag:
+      - W/"9dc66d611c45ff3ecb2a1d245383a452"
+      expires:
+      - '0'
+      pragma:
+      - no-cache
+      referrer-policy:
+      - strict-origin-when-cross-origin
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      transfer-encoding:
+      - chunked
+      x-backend:
+      - easypost
+      x-content-type-options:
+      - nosniff
+      x-download-options:
+      - noopen
+      x-ep-request-uuid:
+      - c6ef69b9627af06eefb59f380021e3a9
+      x-frame-options:
+      - SAMEORIGIN
+      x-node:
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq fde591f008
-      - intlb1wdc fde591f008
-      - extlb1wdc c51cdb8bf2
+      - extlb1nuq c51cdb8bf2
       x-runtime:
-      - '0.119416'
+      - '0.425962'
       x-version-label:
       - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
@@ -95,7 +159,7 @@ interactions:
       x-client-user-agent:
       - REDACTED
     method: DELETE
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_bb4d18c75a14419cae8756fa9cb1ca60
+    uri: https://api.easypost.com/v2/webhooks/hook_1b7c4472d0b611ec98f0711287adaa77
   response:
     body:
       string: '{}'
@@ -125,19 +189,18 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 7cc43dc3627af80defb5a3590021d335
+      - c6ef69b9627af06fefb59f380021e3cc
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb1wdc c51cdb8bf2
+      - extlb1nuq c51cdb8bf2
       x-runtime:
-      - '0.110960'
+      - '0.271690'
       x-version-label:
       - easypost-202205100008-b4df6b5700-master
       x-xss-protection:
